--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-assistant",
+  "name": "AIssistant",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "0.17.1",
+    "next": "14.2.8",
+    "openai": "^4.60.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "typescript": "^5"
   }
 }
