--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
+    "react-hooks/exhaustive-deps": "off",
     "@typescript-eslint/no-explicit-any": "off"
   }
 }
